# tiralabra-connect4

./: .coveragerc  .pylintrc  README.md  pyproject.toml  tasks.py
.github/workflows/: main.yml
dokumentaatio/: kayttoohje.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
dokumentaatio/viikkoraportit/: viikkoraportti1.md  viikkoraportti_2.md  viikkoraportti_3.md  viikkoraportti_4.md  viikkoraportti_5.md  viikkoraportti_6.md
src/: ai.py  connect4.py  constants.py  game_ai.py  gameboard.py  play.py
src/tests/: ai_test.py  connect4_test.py  gameboard_test.py
src/ui/: cli.py  command_line_interface.py
